Fixing issue with text alignment with aside post format

--- a/css/less/posts.format-aside.less
+++ b/css/less/posts.format-aside.less
@@ -16,6 +16,7 @@
     padding: 2px;
     color: @post_format_aside_date_color;
     font-size: 11px;
+    text-align: center;
 
     span {
       display: block;
